--- a/style.css
+++ b/style.css
@@ -6,11 +6,15 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 35px;
+}
 .rubel-color{
     color: orange;
 }
-section{
+.contener{
     display: flex;
+    margin-bottom: 150px;
 
 }
 .header-all{
@@ -43,4 +47,30 @@ section div img{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.ex-developer{
+    width: 40%;
+    box-shadow: 10px 10px 40px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    border-radius: 10px;
+}
+.full-stack-web{
+    border-left: 6px solid tomato;
+}
+.baby-web{
+    border-left: 6px solid blue;
+}
+.experience-area h1{
+    margin-left: 2%;
+}
+
+.footer-area p {
+text-align: center;
 }
